<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>pl.psnc.dl.ege</groupId>
  <artifactId>ege-framework</artifactId>
  <version>0.4</version>
  <name>EGE Framework</name>
  <properties>

    <project.build.sourceEncoding>
      UTF-8
    </project.build.sourceEncoding>

    <project.reporting.outputEncoding>
      UTF-8
    </project.reporting.outputEncoding>
  	<maven.compiler.source>1.8</maven.compiler.source>
 	<maven.compiler.target>1.8</maven.compiler.target>
  </properties>


  <url>multiprojects/ege-framework/</url>
  <description>
	Basic EGE API implementation. Provides plugin mechanism based on JPF (Java Plugin Framework).
  </description>
  <licenses>
    <license>
      <name>GPL</name>
      <url>http://www.gnu.org/licenses/gpl.txt</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>tparkola</id>
      <name>Tomasz Parkoła</name>
      <email>tparkola@man.poznan.pl</email>
      <roles>
        <role>Project lead</role>
      </roles>
      <organization>PSNC</organization>
    </developer>
    <developer>
      <id>mariuszs</id>
      <name>Mariusz Stanisławczyk</name>
      <email>mariuszs@man.poznan.pl</email>
      <roles>
        <role>Developer</role>
      </roles>
      <organization>PSNC</organization>
    </developer>
    <developer>
      <id>james.cummings</id>
      <name>James Cummings</name>
      <email>james.cummings@oucs.ox.ac.uk</email>
      <roles>
        <role>Stakeholder</role>
      </roles>
      <organization>Oxford University</organization>
    </developer>
    <developer>
      <id>lou.burnard</id>
      <name>Lou Burnard</name>
      <email>lou.burnard@oucs.ox.ac.uk</email>
      <roles>
        <role>Stakeholder</role>
      </roles>
      <organization>Oxford University</organization>
    </developer>
    <developer>
      <id>sebastian.rahtz</id>
      <name>Sebastian Rahtz</name>
      <email>sebastian.rahtz@it.ox.ac.uk</email>
      <roles>
        <role>Stakeholder</role>
      </roles>
      <organization>Oxford University</organization>
    </developer>
    <developer>
      <id>mwerla</id>
      <name>Marcin Werla</name>
      <email>mwerla@man.poznan.pl</email>
      <roles>
        <role>Stakeholder</role>
      </roles>
      <organization>PSNC</organization>
    </developer>
    <developer>
      <id>roewenstrunk</id>
      <name>Daniel Röwenstrunk</name>
      <email>roewenstrunk@uni-paderborn.de</email>
      <roles>
        <role>Stakeholder</role>
	    <role>Developer</role>
      </roles>
      <organization>Paderborn University</organization>
    </developer>
  </developers>
  <reporting>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.6.2</version>
            <configuration>
                <source>1.8</source>
                <target>1.8</target>
            </configuration>
        </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId><version>2.3</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId><version>2.9</version>
      </plugin>
      <!-- <plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>findbugs-maven-plugin</artifactId>
			<version>2.0.1</version>
		</plugin> -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <report>project-team</report>
              <report>license</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <targetJdk>1.5</targetJdk>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  <dependencies>
    <dependency>
      <groupId>pl.psnc.dl.ege</groupId>
      <artifactId>ege-api</artifactId>
      <version>0.3.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.12</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.4</version>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.jpf</groupId>
      <artifactId>jpf</artifactId>
      <version>1.5</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.jpf</groupId>
      <artifactId>jpf-tools</artifactId>
      <version>1.5.1</version>
    </dependency> 
    <dependency>
      <groupId>net.sf.jpf</groupId>
      <artifactId>jpf-boot</artifactId>
      <version>1.5</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.jung</groupId>
      <artifactId>jung-algorithms</artifactId>
      <version>2.0.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.jung</groupId>
      <artifactId>jung-visualization</artifactId>
      <version>2.0.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.jung</groupId>
      <artifactId>jung-api</artifactId>
      <version>2.0.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.jung</groupId>
      <artifactId>jung-graph-impl</artifactId>
      <version>2.0.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.jung</groupId>
      <artifactId>jung-io</artifactId>
      <version>2.0.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.jung</groupId>
      <artifactId>jung-samples</artifactId>
      <version>2.0.1</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>
   <repositories>
		<repository>
			<id>central</id>
			<name>central</name>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
		<repository>
			<id>edirom</id>
			<name>Edirom</name>
			<url>https://maven.pkg.github.com/Edirom/*</url>
		</repository>
                <repository>
			<id>teic</id>
			<name>TEIC</name>
			<url>https://maven.pkg.github.com/TEIC/*</url>
		</repository>
	</repositories>   
<distributionManagement>
   <repository>
     <id>github</id>
     <name>GitHub TEIC Apache Maven Packages</name>
     <url>https://maven.pkg.github.com/teic/ege-framework</url>
   </repository>
</distributionManagement>
</project>
